--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Chewy&family=Gudea:ital@0;1&display=swap"
+      rel="stylesheet"
+    />
+
     <title>React Weather App</title>
   </head>
   <body>
